# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Front\CategoryController;
+use App\Http\Controllers\Front\DetailsProductController;
 
 /*
 |--------------------------------------------------------------------------
@@ -18,6 +19,9 @@ use App\Http\Controllers\Front\CategoryController;
 Route::get('/getCategories', [CategoryController::class, 'getCategory']);
 Route::get('/get-parent-categories-with-count', [CategoryController::class, 'getParentCategoriesWithProductCount']);
 Route::get('/products-by-category/{slug}', [CategoryController::class, 'getProductsByCategorySlug']);
+Route::get('/product-detail/{slug}', [DetailsProductController::class, 'getProductDetail']);
+Route::get('/related-products/{slug}', [DetailsProductController::class, 'getRelatedProducts']);
+
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
